tasks/testsuite/fixtures/parser-misc/pass/stmt-issue-4369-2.js
// @export_default_from
export foo, * as bar, { baz } from "mod"