tasks/testsuite/fixtures/parser-misc/fail/stmt-issue-4369-1.js
export * as foo, { bar } from "mod"